--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <p class="idea-2">gta? ataw teraria.</p>
       <p class="idea-3">
         bingung si asli<br>
-        <strong>special</strong>
+        <strong>kontol</strong>
         .
       </p>
       <p class="idea-4">coba lu jadi gweh,</p>
